Bug 1669050: add `href` to the allowed SVG attributes in `nsTreeSanitizer`. r=hsivonen

This follows the pattern of `kAttributesHTML` and `kURLAttributesHTML`,
which both contain `href`. Now, `kAttributesSVG` and `kURLAttributesSVG`
contain `href` too.

Unfortunately, the WPT-support for filling and reading the clipboard is
scanty (see bug 1676643), hence adding a Mochitest.

Differential Revision: https://phabricator.services.mozilla.com/D97451